2014-08-14 arne

	* reversed DrawMode kIntegralMode style. Now the regular case is to draw pixel alligned.
	* add CRect::extend method

2014-08-10 arne

	* add two more ExchangeViewAnimation styles

2014-08-06 arne

	* add c++11 lambda alternative for Animation finished message

2014-08-03 arne

	* add new Control: CSegmentButton
	* changed Direct2D termination to not depend on __try __except (thanks to Andreas Persson)

2014-08-01 arne

	* add CGraphicsPath::pixelAlign to align the path to pixel boundaries

2014-07-24 arne

	* CTextButton and CGradientView now takes CGradient objects instead of colors and start offsets.

2014-07-09 arne

	* support drawing the best CBitmap representation according to the scale factor in the D2D backend
	* support setting a transform matrix on CFrame directly

2014-05-27 arne

	* add Matrix Transformation support to CViewContainer to draw contents transformed (works at least for scaling, rotation will not work)
	* add drawBitmapNinePartTiled and fillRectWithBitmap methods to CDrawContext

2014-05-09 arne

	* improve D2D drawing performance
	* fix buttons parameter on mouse up for Windows

2014-05-01 arne

	* add Matrix Transformation support to CDrawContext and remove setOffset() getOffset() from it.
	* redesign integral draw mode to draw pixel aligned
	* removed setClipRect inside of CDrawContext::drawString() to support drawing rotated strings (clip rect needs to be set from outside now)

2014-04-21 arne

	* add support for drawing high resolution bitmaps on Retina Displays

2014-04-20 arne

	* add initial Mac OS X Retina Display support
	* add CDrawContext::Transform to transform any of the CDrawContext draw commands
	* add CDrawContext::drawLine and mark the old methods (moveTo, lineTo) as deprecated
	* add CDrawContext::drawLines which takes a vector of point pairs and mark the old method as deprecated
	* add CDrawContext::drawPolygon which takes a vector of points and mark the old method as deprecated

2014-04-13 arne
