@@ -52,8 +52,6 @@ public:
 class IPlatformViewLayer : public CBaseObject
 {
 public:
-	virtual bool init (IPlatformViewLayerDelegate* drawDelegate) = 0;
-
 	virtual void invalidRect (const CRect& size) = 0; ///< size must be zero based
 	virtual void setSize (const CRect& size) = 0; ///< size is relative to platformParent
 	virtual void setZIndex (uint32_t zIndex) = 0;
